# PROJECT-LEIA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  SALES_NAV.md  pyproject.toml  render.yaml  settings.toml
alembic/: env.py
alembic/versions/: 47a44131a3fc_initial_schema.py  9f3a1c7b2d40_add_cache_token_columns.py  a1b2c3d4e5f6_add_app_config.py  b2c3d4e5f6a7_add_phase2_tables.py  c3d4e5f6a7b8_thread_chat_id.py  d4e5f6a7b8c9_add_research_notes.py
app/: dashboard.py
config/: icp.yaml  message_guidelines.md  settings.example.toml  value_prop.yaml
data/fixtures/: contacts.sample.csv  contacts.sample.json  signals.sample.json
prompts/: converse_system.md  draft_system.md  score_system.md
src/leia/: __init__.py  cli.py  config.py  conversation.py  db.py  dedupe.py  models.py  pacing.py  pipeline.py  schemas.py  suppression.py  tick.py
src/leia/approval/: __init__.py  queue.py
src/leia/channels/: __init__.py  base.py  email_instantly.py  linkedin_unipile.py  stub.py
src/leia/enrichment/: __init__.py  base.py  (+3 more)
tests/: conftest.py  test_brain_stub.py  test_channels.py  test_channels_linkedin.py  test_config.py  test_conversation.py  test_dashboard_backends.py  test_dedupe.py  test_enrichment_stub.py  test_instantly_inbox.py  test_llm_client.py  test_lusha_prospecting.py  test_models.py  test_phase2.py  test_pipeline.py  test_pricing.py  test_queue.py  test_research.py  test_scheduler.py  test_schemas.py  test_sources_apify.py  test_sources_csv.py  test_unipile_inbox.py  test_web.py  test_web_upload.py
(+41 files in other folders)
